# py-syncit-api

./: .copier-answers.yml  .editorconfig  .env.example  .gitignore  .markdownlint-cli2.yaml  .markdownlint.yaml  .pre-commit-config.yaml  .taplo.toml  .tool-versions  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yaml  poe_tasks.toml  pyproject.toml  pytest.ini  release-please-config.json  ruff_defaults.toml
.github/: actionlint.yml  copilot-instructions.md
.github/workflows/: build-push.yml  precommit.yml  release.yml
docs/: README.md
migrations/: __init__.py  env.py
migrations/versions/: 6bd3c96c5350_add_systems.py  __init__.py
src/py_logger/: __init__.py
src/py_sync_it_api/: __init__.py  app.py  exceptions.py  exceptions_handler.py
src/py_sync_it_api/health/: endpoints.py  exceptions.py  schemas.py
src/py_sync_it_api/middlewares/: constants.py  request_logger_middleware.py
src/py_sync_it_api/shared/: dependencies.py  router.py  settings.py
src/py_sync_it_api/shared/db/: __init__.py  engine.py  health.py
src/py_sync_it_api/shared/models/: mixins.py
src/py_sync_it_api/shared/utils/: singleton.py
src/py_sync_it_api/systems/: __init__.py  endpoints.py  exceptions.py  models.py  schemas.py  services.py
tests/: test_version.py
